--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
         "@testing-library/user-event": "^13.5.0",
         "axios": "^0.24.0",
         "leaflet": "^1.7.1",
+        "nanoid": "^3.1.30",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-leaflet": "^3.2.2",
