--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "web-vitals": "^2.1.2"
     },
     "scripts": {
-        "start": "set PORT=3020 && react-scripts start",
+        "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
